# Kavach

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  publish-pypi.yml
business-tests-python/: README.md  run_all.py
business-tests-python/tier1/: 01_quickstart.py  02_document_access.py  03_reset_geo_drift.py  04_session_hygiene.py
business-tests-python/tier2/: 05_signed_permit.py  06_ephemeral_permits.py  07_pq_hybrid_downgrade.py  08_loan_approval.py  09_api_key_rotation.py  10_break_glass.py  11_ecommerce_fraud.py  12_http_mcp.py
business-tests-python/tier3/: 13_secure_channel_fleet.py  14_invalidation_fanout.py  15_agent_marketplace.py  16_healthcare_phi.py  17_pq_audit_rotation.py  18_ai_agent_attestation.py  19_cross_saas_finance_agent.py  20_ai_underwriter_evidence.py  21_customer_deployed_agent.py
docs/: README.md  overview.md  quickstart.md  roadmap.md
docs/concepts/: audit.md  evaluators.md  gate-and-verdicts.md  key-management.md  policies.md  post-quantum.md
docs/guides/: distributed.md  http.md  mcp.md  python.md  rust.md  toml-policies.md  typescript.md
docs/operations/: deployment-patterns.md  incident-response.md  observability.md
docs/reference/: api-surface.md  policy-language.md
e2e-tests/: README.md  bootstrap.py  hard_policies.toml  hard_runner.py  kavach_policies.toml  payment_service.py  requirements.txt  runner.py  support_agent.py  trace_runner.py
examples/: kavach.toml
kavach-core/: Cargo.toml
kavach-core/src/: action.rs  audit.rs  context.rs  drift.rs  error.rs  evaluator.rs  gate.rs  invalidation.rs  invariant.rs  lib.rs  policy.rs  rate_limit.rs  session_store.rs  verdict.rs  watcher.rs
kavach-core/tests/: drift_geo.rs  gate_integration.rs  invalidation_broadcast.rs  rate_limit_fail_closed.rs
kavach-http/: Cargo.toml  README.md
kavach-http/examples/: actix_middleware.rs  axum_layer.rs  http_api.rs
kavach-http/src/: actix_middleware.rs  lib.rs  tower_layer.rs
kavach-http/tests/: actix_middleware.rs  tower_layer_axum.rs
kavach-mcp/: Cargo.toml  README.md
kavach-mcp/examples/: mcp_server.rs
kavach-mcp/src/: lib.rs
kavach-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
kavach-node/npm/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
kavach-node/npm/examples/: mcp_server.ts
kavach-node/npm/src/: http.ts  index.ts  mcp.ts
kavach-node/npm/tests/: smoke_test.ts
kavach-node/src/: lib.rs
kavach-pq/: Cargo.toml
kavach-pq/src/: audit.rs  channel.rs  directory.rs  encrypt.rs  error.rs  http_directory.rs  hybrid.rs  keys.rs  lib.rs  sign.rs  token.rs  verdict.rs
kavach-pq/tests/: crypto_integration.rs  directory_verification.rs
kavach-py/: Cargo.toml  README.md  pyproject.toml
kavach-py/python/examples/: mcp_server.py
kavach-py/python/kavach/: __init__.py  decorators.py  http.py  mcp.py  wrappers.py
kavach-py/python/tests/: smoke_test.py
kavach-py/src/: lib.rs
kavach-redis/: Cargo.toml
kavach-redis/src/: broadcaster.rs  lib.rs  rate_limit.rs  session_store.rs
kavach-redis/tests/: integration.rs
