[package]
name = "kavach-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kavach HTTP middleware for Axum/Tower — gate every API endpoint"

[dependencies]
kavach-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Tower Service/Layer integration — opt-in so users who don't need it
# aren't forced to pull these dependencies.
tower = { version = "0.5", optional = true, features = ["util"] }
http = { version = "1", optional = true }
http-body = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# Actix-web integration — opt-in (separate dep tree from Tower/Axum).
actix-web = { version = "4", optional = true, default-features = false, features = ["macros"] }
futures-util = { version = "0.3", optional = true }

[features]
default = []
# Enables the Tower `Layer`/`Service` integration (`KavachLayer`,
# `KavachService`). Works out-of-the-box with Axum.
tower = ["dep:tower", "dep:http", "dep:http-body", "dep:http-body-util", "dep:bytes", "dep:pin-project-lite"]
# Enables the Actix-web `Transform`/`Service` integration
# (`KavachActixMiddleware`).
actix = ["dep:actix-web", "dep:futures-util", "dep:bytes"]

[dev-dependencies]
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
bytes = "1"
# Dev-deps want the full actix-web runtime for HttpServer/App/test.
actix-web = "4"
futures-util = "0.3"
