[package]
name = "kavach-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js/TypeScript bindings for Kavach — compiled Rust engine exposed via napi-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
kavach-core = { workspace = true }
kavach-pq = { workspace = true }
napi = { version = "2", features = ["async", "serde-json"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
napi-build = "2"
