[package]
name = "kavach-pq"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Post-quantum transport security, ML-KEM key encapsulation, ML-DSA signatures, hybrid channels, verdict signing"

[dependencies]
kavach-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

# Post-quantum cryptography (NIST-approved, audited implementations)
ml-kem = "=0.3.0-rc.2"       # FIPS 203: key encapsulation (formerly Kyber)
ml-dsa = "=0.1.0-rc.8"       # FIPS 204: digital signatures (formerly Dilithium)

# Classical cryptography (for hybrid mode)
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["serde"] }  # Classical signatures
chacha20poly1305 = "0.10"     # Symmetric AEAD after key exchange

# Utilities
rand_core = "0.10"
# x25519-dalek 2 / ed25519-dalek 2 still use rand_core 0.6 traits. We keep
# this alongside the 0.10 we use for ml-kem, Cargo lets both majors coexist.
rand_core_06 = { package = "rand_core", version = "0.6", features = ["getrandom"] }
getrandom = "0.3"
sha2 = "0.10"
hex = "0.4"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }  # Secure memory clearing
hybrid-array = "0.4"

# Optional, HTTP-backed PublicKeyDirectory (feature `http`).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }

[features]
# Turn on for `HttpPublicKeyDirectory` + `reqwest`-backed fetch with ETag caching.
http = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3"
