[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "kavach"
version = "0.1.0"
description = "Post-quantum execution boundary enforcement for AI agents, APIs, and distributed systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
# The compiled cdylib is placed inside the `kavach` Python package so that
# `from kavach._kavach_engine import ...` resolves to the native module.
module-name = "kavach._kavach_engine"
python-source = "python"
